Made some values into constants. Followed pieces of advice.